martian-derive/tests/ui_martian_filetype/test_trailing_dot.stderr
error: Extensions cannot end in a dot(.)
 --> $DIR/test_trailing_dot.rs:3:20
  |
3 | martian_filetype! {TxtFile, "txt."}
  |                    ^^^^^^^^^^^^^^^
