martian-derive/tests/ui_martian_filetype/test_trailing_dot.rs
use martian_derive::martian_filetype;

martian_filetype! {TxtFile, "txt."}

fn main() {}